# wxmp3gain

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  makefile
.github/workflows/: main.yml
debian/: changelog  changelog.in  control  control.in  copyright  postinst  postrm
debian/menu/: app.desktop  app.desktop.in  wxmp3gain.desktop
debian/source/: options
doc/: AUTHORS  CHANGELOG  CHANGELOG.md  README  README.md  TODO.md
docs/: AUTHORS  CHANGELOG  README  TODO
generate/linux/: eclipse-make-project.sh
generate/windows/: code-blocks-mingw-project.bat  codelite-mingw-project.bat  eclipse-mingw-project-autodetect.bat  eclipse-mingw-project.bat  mingw-makefiles-autodetect.bat  mingw-makefiles.bat  msvs-project.bat
msg/: cs.po  de.po  en_template.pot  es.po  hr_HR.po  ja.po  pt_BR.po  ru.po  tr.po
packaging/: README.md
packaging/debian/: control
packaging/windows/: README.md  installer.iss  installer.iss.in  resource.rc
po/: cs.po  de.po  en_template.pot  es.po  ru.po  zh_CN.po
sources/: CMakeLists.txt
sources/cmake/: DefaultValues.cmake  Initialization.cmake
sources/cmake/dependencies/gettext/: CMakeLists.txt  GettextExternalProject.cmake  GettextFunctions.cmake  GettextSettings.cmake
sources/cmake/dependencies/gettext/functions/: GettextBuildCommand.cmake  GettextConfigureCommand.cmake  GettextFindOrInstallDependencies.cmake  GettextInstallCommand.cmake  GettextInvokeDependencyHelper.cmake
sources/cmake/dependencies/gettext/settings/: GettextSettingsDefaults.cmake
sources/cmake/dependencies/wxWidgets/: CMakeLists.txt  wxWidgetsExternalProject.cmake  wxWidgetsFunctions.cmake  wxWidgetsSettings.cmake
sources/cmake/dependencies/wxWidgets/functions/: wxWidgetsBuildCommand.cmake  wxWidgetsConfigureCommand.cmake  wxWidgetsFindOrInstallDependencies.cmake  wxWidgetsInstallCommand.cmake  wxWidgetsInvokeDependencyHelper.cmake
sources/cmake/dependencies/wxWidgets/settings/: wxWidgetsSettingsDefaults.cmake
sources/cmake/modules/: DetectCompilerInformation.cmake  DetectTargetArchitecture.cmake  EnablePropertiesOfGlobalScope.cmake  InformUserAboutCmakeSettings.cmake  SetDefaultPaths.cmake  SetNamingConvention.cmake  SetOperatingSystemDependentVariables.cmake  Tools.cmake
sources/cmake/modules/paths/: SetCompilePaths.cmake  SetExternalProjectsBasePath.cmake  SetInstallPaths.cmake  SetUserDirectory.cmake
sources/cmake/modules/tools/: DebuggingUtils.cmake  GenerateResourceFiles.cmake  StringUtils.cmake
sources/cmake/toolchains/linux/: amd64.toolchain  x86.toolchain
sources/cmake/toolchains/windows/: mingw32.toolchain  mingw64.toolchain
sources/templates/: CMakeLists.txt  Constants.h.in
sources/templates/resource/: resource_icon.h.in  resource_icon.rc.in
sources/wxmp3gain/: CMakeLists.txt
sources/wxmp3gain/debian/: changelog  copyright
sources/wxmp3gain/debian/menu/: wxMP3gain.desktop
sources/wxmp3gain/doc/: CHANGELOG  README
sources/wxmp3gain/msg/: cs.po  de.po  hr_HR.po  pt_BR.po  ru.po  tr.po
sources/wxmp3gain/src/: ConfigBase.cpp  ConfigBase.h  Conversion.h  DndFile.cpp  DndFile.h  FileInfo.cpp  Gui.h  GuiDialogSettings.cpp  Main.cpp  Main.h
sources/wxmp3gain/windows-dist/: resource.rc
src/: AppSettings.cpp  AppSettings.hpp  Application.cpp  Application.h  ConfigBase.cpp  ConfigBase.h  ConfigBase.hpp  Constants.h  Constants.hpp  Constants.hpp.in  Conversion.cpp  Conversion.h  Conversion.hpp  DndFile.cpp  DndFile.h  DndFile.hpp  FileData.cpp  FileData.hpp  FileDrop.cpp  FileDrop.hpp  FileInfo.cpp  FileInfo.h  FileInfo.hpp  FileListManager.cpp  FileListManager.h  FileListManager.hpp  Gui.cpp  Gui.fbp  Gui.h  GuiDialogSettings.cpp  GuiDialogSettings.h  GuiDialogSettings.hpp  GuiFrameMain.cpp  GuiFrameMain.h  GuiFrameMain.hpp  GuiMain.cpp  GuiMain.h  GuiSettings.cpp  ListCtrlManager.cpp  ListCtrlManager.hpp  (+5 more)
src/ui/: Gui.cpp  Gui.fbp  Gui.h  GuiDialogSettings.cpp  GuiDialogSettings.hpp  GuiFrameMain.cpp  GuiFrameMain.hpp
windows/: README.md  build-binaries.cmd  build-installer.iss  installer.iss  make-setup.iss  resource.res
windows-dist/: README.md  resource.rc
wxmp3gain/: CMakeLists.txt  makefile  wxMP3gain_Linux.cbp  wxMP3gain_Windows.cbp
wxmp3gain/debian/: changelog  control  copyright  rules
wxmp3gain/debian/menu/: icon.xpm  wxmp3gain
wxmp3gain/docs/: CHANGELOG  README  TODO
wxmp3gain/msg/: cs.po  de.po  es.po  pt.po  pt_BR.po  ru.po  template.po  wxmp3gain.po
wxmp3gain/src/: Application.cpp  AudioInfo.cpp  AudioInfo.h  ConfigBase.cpp  ConfigBase.h  Constants.h  Conversion.cpp  Conversion.h  DndFile.cpp  DndFile.h  FileInfo.cpp  FileInfo.h  FileListManager.cpp  FileListManager.h  Global.h  Gui.cpp  Gui.fbp  Gui.h  GuiMain.cpp  GuiMain.h  GuiMain2.cpp  GuiMain2.h  GuiSettings.cpp  GuiSettings.h  Progress.cpp  Progress.h  frmAbout.cpp  frmAbout.h  frmMain.cpp  frmMain.h  frmSettings.cpp  frmSettings.h  resource.rc  wxMP3gainApp.cpp  wxMP3gainApp.h
wxmp3gain/wxsmith/: frmAbout.wxs  frmMain.wxs  frmSettings.wxs
